--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -30,7 +30,7 @@
         "visible-addresses": "Видима адреса?",
         "street": "Вулиця",
         "number": "Номер",
-        "permitted-rent-info": "Затверджено формування орендної плати",
+        "permitted-rent-form": "Затверджено формування орендної плати",
         "build-year": "Рік побудови будинку",
         "nums-of-floors": "Кількість поверхів",
         "living-spase": "Житлова площа (м2)",
@@ -46,7 +46,7 @@
         "park-place-price": "Ціна паркомісця",
         "park-place": "Паркомісце",
         "rooms": "Кімнати",
-        "storage": "Сховище",
+        "state": "Стан",
         "net-operation-costs": "Чисті операційні витрати",
         "broker-commissions": "Брокерська комісія",
         "broker-commissions-percentage": "Брокерська комісія (%)",
@@ -54,6 +54,41 @@
         "location-descriptions": "Опис локації",
         "coordinates": "Широта і довгота",
         "photos":"Додайте фотографії"
+      },
+      "rent-formation": {
+        "index-rent": "Індексна орендна плата",
+        "graduated-rent": "Поетапне підвищення орендної плати",
+        "comparative-rent": "Порівняльна орендна плата",
+        "social-rent": "Соціальна орендна плата",
+        "rent-cap": "Обмеження зростання орендної плати",
+        "cost-rent": "Орендна плата на основі витрат",
+        "cooperative-rent": "Орендна плата для кооперативів",
+        "hereditary-lease": "Оренда на основі спадкової забудови",
+        "rental-yield": "Оцінка прибутковості орендної плати",
+        "income-valuation": "Оцінка вартості на основі доходу від оренди",
+        "rental-control": "Обмеження на орендну плату",
+        "graduated-lease": "Договір із фіксованим підвищенням орендної плати",
+        "indexed-lease": "Договір із прив’язкою до інфляції",
+        "social-regulation": "Соціальне регулювання орендної плати",
+        "commercial-rent": "Орендна плата для комерційної нерухомості",
+        "termination-for-own-use": "Можливість припинення договору для власного використання"
+
+      },
+      "parking": {
+        "underground": "Підземний паркінг",
+        "garage": "Гараж",
+        "carport": "Навіс для авто",
+        "outdoor": "Відкрите паркомісце",
+        "covered": "Критий паркінг",
+        "none": "Без паркомісця"
+      },
+      "condition": {
+        "new": "Новобудова",
+        "renovated": "Відремонтоване",
+        "modernized": "Модернізоване",
+        "well-maintained": "Доглянуте",
+        "needs-renovation": "Потребує ремонту",
+        "run-down": "Занедбане"
       }
     },
     "premises": {
