--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -37,7 +37,7 @@
         "balcony": "Балкон (м2)",
         "terrace": "Тераса (м2)",
         "garden": "Двір (m2)",
-        "heating-type":"Тип опалення",
+        "heating-type": "Тип опалення",
         "energy-certificate": "Енергетичний сертифікат дійсний до",
         "HBW-energy-class": "HBW Клас енергоспоживання",
         "fGEE-energy-class": "fGEE Клас енергоспоживання",
@@ -53,7 +53,21 @@
         "property-descriptions": "Опис об'єкта",
         "location-descriptions": "Опис локації",
         "coordinates": "Широта і довгота",
-        "photos":"Додайте фотографії"
+        "photos": "Додайте фотографії"
+      },
+      "premises-form": {
+        "labels": {
+          "type": "Тип ",
+          "name": "Назва ",
+          "square": "Кв. метрів"
+        }
+      },
+      "fees-form": {
+        "labels": {
+          "fee": "Внесок",
+          "percent": "Відсоток",
+          "extra-information": "Конкретніше"
+        }
       },
       "rent-formation": {
         "index-rent": "Індексна орендна плата",
@@ -72,7 +86,6 @@
         "social-regulation": "Соціальне регулювання орендної плати",
         "commercial-rent": "Орендна плата для комерційної нерухомості",
         "termination-for-own-use": "Можливість припинення договору для власного використання"
-
       },
       "parking": {
         "underground": "Підземний паркінг",
@@ -133,7 +146,7 @@
             "p": "Дякємо! Ваш платіж пройшов успішно. Ми раді, що ви обрали нас. Ваше оголошення успішно розміщено в топі оголошень."
           },
           "rejected": {
-            "title":"ПОМИЛКА",
+            "title": "ПОМИЛКА",
             "p": "Виникла проблема. Спробуйте пізніше. Дякуємо за розуміння. Або напишіть нам, ми з радістю вам допоможемо."
           }
         }
@@ -378,7 +391,10 @@
             "garage": "Гараж",
             "garden": "Сад",
             "bedroom-with-wardrobe": "Спальня з гардеробом на першому поверсі",
-            "wc": "WC"
+            "wc": "WC",
+            "kitchen": "Кухня",
+            "storage": "Складське приміщення",
+            "cellar": "Льох"
           },
           "equipments": {
             "title": "ОБЛАДНАННЯ",
@@ -395,10 +411,11 @@
           },
           "fees": {
             "title": "ЗБОРИ",
-            "transfer-tax": "Податок на продаж нерухомості",
+            "transfer-tax": "Податок на продаж",
             "land-registry": "Запис в земельну книгу",
-            "purchase-agreement": "Складання договору купівлі-продажу",
-            "purchase-agreement-descr": "за тарифом відповідного провайдера"
+            "purchase-agreement": "Договір купівлі-продажу",
+            "purchase-agreement-descr": "за тарифом відповідного провайдера",
+            "broker-fee": "Брокерські послуги"
           },
           "monthly_costs": {
             "title": "МІСЯЧНІ ВИТРАТИ",
