--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -15,8 +15,21 @@
     "buy": {
       "title": "Купити "
     },
+    "messages": {
+      "title": "Мої повідомлення"
+    },
+    "inboxes": {
+      "title": "Вхідні "
+    },
+    "sent": {
+      "title": "Відправлені "
+    },
+    "archive": {
+      "title": "Архів "
+    },
     "details": {
       "title": "Деталі ",
+      "modal-info": "# ДОЗВОЛЕНЕ ФОРМУВАННЯ ОРЕНДНОЇ ПЛАТИ\n\n## **Вільна орендна плата**  \nРозмір вільної орендної плати визначається попитом і пропозицією на ринку.  \nПеревірка обґрунтованості вільної орендної плати судом або арбітражною комісією неможлива.  \n\nВільне формування орендної плати застосовується, якщо:  \n\n **1. Ви укладаєте довгостроковий договір оренди (більше ніж 6 місяців).**  \n **2. Ваш об'єкт не експлуатується як будинок престарілих, гуманітарна організація,**  \n   житловий комплекс, парковка, транспортне, аеропортове,  \n   експедиторське чи складське підприємство.  \n **3. Одна з наступних умов виконується:**  \n   -   Ваш об'єкт знаходиться у будівлі,  \n       що була побудована після **1953** року без державного фінансування.  \n   -   Ваш об'єкт є мансардним переобладнанням або надбудовою,  \n       для якої дозвіл на будівництво було видано після **31.12.2001**.  \n   -   Ваш об'єкт є прибудовою,  \n       для якої дозвіл на будівництво було видано після **30.09.2006**.  \n   -   Ваш об'єкт є власністю у кондомініумі та розташований у будівлі,  \n       збудованій після отримання дозволу на будівництво **08.05.1945**.  \n   -   Ваш об'єкт — це **одно- або двоквартирний будинок**.  \n   -   Ваш об'єкт — це **друге житло для відпочинку** (дача, заміське житло).  \n   -   Ваш об'єкт — це **службова квартира**.  \n\n## **Регульована орендна плата**  \nДля всіх інших об'єктів застосовується **регульоване формування орендної плати**.  \n\nРегульована орендна плата — це така плата, розмір і можливості підвищення якої  \nчітко регулюються Законом про оренду **(MRG)**.  \nДо **регульованої орендної плати** відноситься ряд типів оренди.  \n",
       "details-form": {
         "choose": "Виберіть",
         "placeholder": "Введіть текст",
@@ -67,6 +80,96 @@
           "fee": "Внесок",
           "percent": "Відсоток",
           "extra-information": "Конкретніше"
+        },
+        "placeholders": {
+          "name": "Назва"
+        }
+      },
+      "monthly-costs-form": {
+        "labels": {
+          "cost-type": "Тип витрат",
+          "cost": "Вартість",
+          "ust": "UST %"
+        }
+      },
+      "equipments": {
+        "outlook": {
+          "title": "Вид",
+          "mountain": "Вид на гори",
+          "lake": "Вид на озеро",
+          "sea": "Вид на море",
+          "green": "Вид на зелень",
+          "long-distance": "Далекий вид",
+          "city": "Вид на місто"
+        },
+        "free-space": {
+          "title": "Вільний простір",
+          "north": "Північ",
+          "eats": "Схід",
+          "south": "Південь",
+          "west": "Захід",
+          "northeast": "Північний схід",
+          "southeast": "Південний схід",
+          "southwest": "Південний захід",
+          "northwest": "Північний захід"
+        },
+        "kitchen": {
+          "title": "Кухня",
+          "fit-kitchen": "Вбудована кухня",
+          "compact-kitchen": "Кухонний куточок",
+          "tea-kitchen": "Чайна кухня",
+          "eat-in-kitchen": "Кухня-їдальня"
+        },
+        "floor": {
+          "title": "Підлога",
+          "floorboards": "Дощатий настил",
+          "tiles": "Плитка",
+          "linoleum": "Лінолеум",
+          "carpet-floor": "Килимове покриття",
+          "granite": "Граніт",
+          "marble": "Мармур",
+          "screed": "Стяжка",
+          "plastic-floor": "Пластикове покриття",
+          "parquet": "Паркет",
+          "terracotta": "Теракота",
+          "laminate": "Ламінат",
+          "stone-floor": "Кам'яна підлога"
+        },
+        "windows": {
+          "title": "Вікна",
+          "external-sun-protection": "Зовнішній захист від сонця",
+          "internal-sun-protection": "Внутрішній захист від сонця",
+          "roller-shutters": "Ролетні віконниці",
+          "glare-protection": "Захист від відблисків",
+          "double-glazing": "Подвійне скління",
+          "multiple-glazing": "Багатошарове скління",
+          "plastic-windows": "Пластикові вікна"
+        },
+        "extras": {
+          "title": "Додаткові зручності",
+          "furnished": "Мебльована",
+          "outdoor-shower": "Зовнішній душ",
+          "fitness-room": "Фітнес-зал",
+          "playground": "Дитячий майданчик",
+          "lake-access": "Вихід до озера",
+          "laundry-drying-room": "Прально-сушильна кімната",
+          "alarm-system": "Сигналізація",
+          "bike-room": "Велосипедна кімната",
+          "sauna": "Сауна",
+          "wine-cellar": "Винний льох",
+          "winter-garden": "Зимовий сад",
+          "bathtub": "Ванна",
+          "storage-room": "Комора",
+          "steam-bath": "Парова баня",
+          "grill-area": "Зона для гриля",
+          "wheelchair-accessible": "Доступ для інвалідів",
+          "swimming-pool": "Басейн",
+          "whirlpool": "Джакузі",
+          "library": "Бібліотека",
+          "garden-use": "Використання саду",
+          "near-subway": "Поруч метро",
+          "wellness-area": "Зона відпочинку",
+          "bath-with-window": "Ванна з вікном"
         }
       },
       "rent-formation": {
