--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -16,7 +16,11 @@
       "title": "Купити "
     },
     "messages": {
-      "title": "Мої повідомлення"
+      "title": "Мої повідомлення",
+      "common": {
+        "you": "Ви",
+        "to": "Кому"
+      }
     },
     "inboxes": {
       "title": "Вхідні "
@@ -329,6 +333,7 @@
       "save": "Зберегти",
       "upload-doc": "Завантажити документ",
       "send": "Надіслати",
+      "send-message": "Відправити повідомлення",
       "understood": "Зрозуміло",
       "find-reason": "З'ясуйте причину",
       "create-ad": "Створити оголошення",
